src/test/deca/syntax/parser/invalid/cast_int_to_symbole.deca
// Parser test, int casted to reserved word

{
    int x = 5;
    (&&) (x);
}